<resources>
    <string name="app_name">GateKept</string>
    <string name="search_placeholder">Search subjects, course codes...</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="loading_title">Loading Title...</string>
    <string name="loading_course">Loading Course...</string>
    <string name="u">U</string>
    <string name="uploaded_by">Uploaded by...</string>
    <string name="upvote">Upvote</string>
    <string name="discourse">Discourse</string>
    <string name="go_back">Go_Back</string>
    <string name="bookmark">bookmark</string>
    <string name="for_moderators_only">For Moderators Only:</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="sign_in_with_email">Sign In with Email</string>
    <string name="for_users_only">For Users Only:</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="applogo">applogo</string>
    <string name="moderator_hq">Moderator HQ</string>
    <string name="manage_the_campus_vault">Manage the Campus Vault</string>
    <string name="admin_log_out">admin_log_out</string>
    <string name="needs_approval">Needs Approval</string>
    <string name="manage_database">Manage Database</string>
    <string name="manage_users">Manage Users</string>
    <string name="settings">Settings</string>
    <string name="community">COMMUNITY</string>
    <string name="track_active_bounties">Track Active Bounties</string>
    <string name="request_a_feature">Request a Feature</string>
    <string name="submit_feedback">Submit Feedback</string>
    <string name="about_amp_legal"><![CDATA[ABOUT & LEGAL]]></string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_of_service">Terms of Service</string>
    <string name="help_amp_support"><![CDATA[Help & Support]]></string>
    <string name="sign_out">Sign Out</string>
    <string name="add_to_the_discourse">Add to the discourse...</string>
    <string name="send_message">send_message</string>
    <string name="post_a_request_bounty">Post a Request Bounty</string>
    <string name="uploaders_will_receive_100_bonus_reputation_points_for_uploading_a_document_that_matches_your_request">Uploaders will receive 100 bonus reputation points for uploading a document that matches your request.</string>
    <string name="topic_or_course_code">Topic or Course Code</string>
    <string name="specific_details_e_g_need_2024_midterms">Specific Details (e.g., \'Need 2024 Midterms\')</string>
    <string name="submit_to_board">SUBMIT TO BOARD</string>
    <string name="welcome_back">Welcome back,</string>
    <string name="student">Student</string>
    <string name="notifications">notifications</string>
    <string name="pdf_logo">pdf_logo</string>
    <string name="_0">0</string>
    <string name="gatekept">GateKept</string>
    <string name="bookmark_filled">bookmark_filled</string>
    <string name="scholars">Scholars</string>
    <string name="quick_actions">QUICK ACTIONS</string>
    <string name="browse_lens">Browse Lens</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="top_scholars">TOP SCHOLARS</string>
    <string name="campus_trending">CAMPUS TRENDING</string>
    <string name="campus_bounty_board">CAMPUS BOUNTY BOARD</string>
    <string name="no_bounties_yet_check_back_later">No bounties yet - check back later 👀</string>
    <string name="my_profile">My Profile</string>
    <string name="us">US</string>
    <string name="user_name">User Name</string>
    <string name="student_rvu_edu_in">student@rvu.edu.in</string>
    <string name="novice">★ Novice</string>
    <string name="contributions">Contributions</string>
    <string name="reputation">Reputation</string>
    <string name="my_contributions">MY CONTRIBUTIONS</string>
    <string name="my_bookmarks">My Bookmarks</string>
    <string name="_0_documents_saved">0 documents saved</string>
    <string name="your_vault_is_empty">Your vault is empty.</string>
    <string name="save_documents_from_the_lens_to_read_later">Save documents from the Lens to read later.</string>
    <string name="the_lens">The Lens</string>
    <string name="search_data_structures_cs202">Search Data Structures, CS202...</string>
    <string name="sort_by">Sort By</string>
    <string name="category">Category</string>
    <string name="school">School</string>
    <string name="program">Program</string>
    <string name="collg_year">Collg Year</string>
    <string name="exam_type">Exam Type</string>
    <string name="no_documents_found">No documents found.</string>
    <string name="be_the_first_to_request_this_topic_uploaders_earn_a_reputation_bounty_for_fulfilling_it">Be the first to request this topic. Uploaders earn a Reputation Bounty for fulfilling it!</string>
    <string name="post_a_bounty">POST A BOUNTY</string>
    <string name="contribute">Contribute</string>
    <string name="securely_upload_documents_to_the_campus_vault">Securely upload documents to the campus vault.</string>
    <string name="add_logo">add_logo</string>
    <string name="tap_to_browse_pdf">Tap to browse PDF</string>
    <string name="_1_core_details">1. CORE DETAILS</string>
    <string name="course_name_exploring_science">Course Name (Exploring Science)</string>
    <string name="code">Code</string>
    <string name="custom_title_optional">Custom Title (Optional)</string>
    <string name="_2_classification">2. CLASSIFICATION</string>
    <string name="academic_year">Academic Year</string>
    <string name="year_the_paper_notes_was_created">Year the Paper/Notes was created</string>
    <string name="publish_to_gatekept">Publish to GateKept!</string>
    <string name="document_title">Document Title</string>
    <string name="pending">PENDING</string>
    <string name="uploaded_by_username_date">Uploaded by Username • Date</string>
    <string name="reject">REJECT</string>
    <string name="view">VIEW</string>
    <string name="approve">APPROVE</string>
    <string name="_100_rep">+100 Rep</string>
    <string name="exploring_science_2024_midterm">Exploring Science 2024 Midterm</string>
    <string name="specifically_looking_for_the_questions_related_to_quantum_mechanics">Specifically looking for the questions related to Quantum mechanics.</string>
    <string name="requested_by_amruthesh">Requested by Amruthesh</string>
    <string name="st">ST</string>
    <string name="student_name">Student Name</string>
    <string name="just_now">Just now</string>
    <string name="this_is_the_comment_text">This is the comment text.</string>
    <string name="data_structures_amp_algos"><![CDATA[Data Structures & Algos]]></string>
    <string name="pdf">PDF</string>
    <string name="_4_9">4.9</string>
    <string name="_1">#1</string>
    <string name="ac">AC</string>
    <string name="amruthesh_c_hiremath">AMRUTHESH C HIREMATH</string>
    <string name="_238_pts">238 pts</string>
    <string name="home">home</string>
    <string name="search">search</string>
    <string name="upload">upload</string>
    <string name="profile">profile</string>
</resources>