<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:gravity="center"
    android:paddingHorizontal="20dp"
    android:paddingTop="10dp"
    android:paddingBottom="10dp"
    android:background="@drawable/bg_floating_navbar">


    <ImageView
        android:id="@+id/navHome"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginEnd="12dp"
        android:contentDescription="@string/home"
        android:padding="12dp"
        android:src="@drawable/ic_home"
        app:tint="@color/nav_item_colors" />

    <ImageView
        android:id="@+id/navSearch"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginEnd="12dp"
        android:contentDescription="@string/search"
        android:padding="12dp"
        android:src="@drawable/ic_search"
        app:tint="@color/nav_item_colors" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardUploadContainer"
        android:layout_width="52dp"
        android:layout_height="52dp"
        android:layout_marginHorizontal="8dp"
        app:cardCornerRadius="26dp"
        app:cardElevation="0dp"
        app:cardBackgroundColor="@color/glowing_blue_center">

        <ImageView
            android:id="@+id/navUpload"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/upload"
            android:padding="14dp"
            android:src="@drawable/ic_add"
            app:tint="@color/white" />
    </com.google.android.material.card.MaterialCardView>

    <ImageView
        android:id="@+id/navSaved"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="12dp"
        android:contentDescription="@string/bookmark"
        android:padding="12dp"
        android:src="@drawable/ic_bookmark"
        app:tint="@color/nav_item_colors" />

    <ImageView
        android:id="@+id/navProfile"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="12dp"
        android:contentDescription="@string/profile"
        android:padding="12dp"
        android:src="@drawable/ic_profile"
        app:tint="@color/nav_item_colors" />

</LinearLayout>